tests/rt/pos/ifc/cert-pos-01.trp
let val x = 1    
in cert(x) 
end