tests/rt/neg/core/tuples_idx04c.trp
let val x = 0 in x.0 end